--- a/app/src/main/res/layout/activity_upazila.xml
+++ b/app/src/main/res/layout/activity_upazila.xml
@@ -4,90 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".UpazilaActivity">
+
 
     <TextView
-        android:id="@+id/demoText"
+        android:id="@+id/demoText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:text="Division Data :"
+        android:text="Upaziloa Data :"
         android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Large"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/marvelItemsRecView" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/marvelItemsRecView"
+        android:id="@+id/marvelItemsRecView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="15dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/demoText" />
-
-
-    <!-- <LinearLayout
-         android:id="@+id/firstPairOfSpin"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal"
-         android:layout_marginTop="10dp"
-         android:layout_margin="5dp"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toBottomOf="@+id/demoText">
-
-         <Spinner
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginRight="5dp"
-             android:layout_weight="1"
-             android:paddingTop="10dp"
-             android:paddingBottom="10dp" />
-
-         <Spinner
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="5dp"
-             android:layout_weight="1"
-             android:paddingTop="10dp"
-             android:paddingBottom="10dp" />
-
-     </LinearLayout>
-
-     <LinearLayout
-         android:id="@+id/secondPairOfSpin"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal"
-         android:layout_marginTop="10dp"
-         android:layout_margin="5dp"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintTop_toBottomOf="@+id/firstPairOfSpin"
-         app:layout_constraintStart_toStartOf="parent">
-
-         <Spinner
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginRight="5dp"
-             android:layout_weight="1"
-             android:paddingTop="10dp"
-             android:paddingBottom="10dp" />
-
-         <Spinner
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="5dp"
-             android:layout_weight="1"
-             android:paddingTop="10dp"
-             android:entries="@array/BloodGroup"
-             android:paddingBottom="10dp" />
-
-     </LinearLayout>-->
+        app:layout_constraintTop_toBottomOf="@+id/demoText2" />
 
     <!-- <LinearLayout
         android:id="@+id/firstPairOfSpin"
